[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy/enemy.gd" type="Script" id=1]

[node name="EnemyTemplate" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Notifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]

[connection signal="animation_finished" from="Animation" to="." method="on_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="on_attack_timer_timeout"]
